Use custom user model

--- a/templates/addTeacher.html
+++ b/templates/addTeacher.html
@@ -1,9 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8" />
     <title>Thearning-Rekapan nilai</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
     <link
       href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css"
       rel="stylesheet"
@@ -20,7 +21,7 @@
       </div>
       <ul class="nav-links">
         <li>
-          <a href="admin.html">
+          <a href="admin/admin.html">
             <i class="bx bx-grid-alt"></i>
             <span class="links_name">Dashboard</span>
           </a>
@@ -106,10 +107,8 @@
                 <li class="topic">Jenis Kelamin</li>
                 <li class="topic">Level</li>
                 <li class="topic">Mata Pelajaran</li>
-                <li class="topic">Kelas</li>
               </ul>
               <ul class="details">
-                <li>:</li>
                 <li>:</li>
                 <li>:</li>
                 <li>:</li>
@@ -156,15 +155,6 @@
                     name="level"
                     id="level"
                     placeholder="Masukkan Level"
-                  />
-                </li>
-                <li>
-                  <input
-                    type="text"
-                    name="course"
-                    id="course"
-                    placeholder="Mata Pelajaran"
-                    style="width: 230%"
                   />
                 </li>
                 <li>
