--- a/templates/changePassword.html
+++ b/templates/changePassword.html
@@ -20,19 +20,19 @@
       </div>
       <ul class="nav-links">
         <li>
-          <a href="user.html">
+          <a href="teacher/user.html">
             <i class="bx bx-grid-alt"></i>
             <span class="links_name">Dashboard</span>
           </a>
         </li>
         <li>
-          <a href="grade.html">
+          <a href="teacher/grade.html">
             <i class="bx bxs-file-plus"></i>
             <span class="links_name">Input Nilai</span>
           </a>
         </li>
         <li>
-          <a href="editGrade.html">
+          <a href="teacher/editGrade.html">
             <i class="bx bx-edit"></i>
             <span class="links_name">Edit Nilai</span>
           </a>
@@ -44,7 +44,7 @@
           </a>
         </li>
         <li>
-          <a href="hrTeacher.html">
+          <a href="hrteacher/hrTeacher.html">
             <i class="bx bxs-user-account"></i>
             <span class="links_name">Wali Kelas</span>
           </a>
@@ -218,7 +218,7 @@
               </ul>
             </div>
             <div class="button">
-              <a href="user.html" onClick="alert('Data Guru Berhasil Diubah')"
+              <a href="teacher/user.html" onClick="alert('Data Guru Berhasil Diubah')"
                 ><i class="bx bx-save" style="margin-right: 5px"></i>Simpan</a
               >
             </div>
