--- a/templates/teacher.html
+++ b/templates/teacher.html
@@ -21,7 +21,7 @@
       </div>
       <ul class="nav-links">
         <li>
-          <a href="admin.html">
+          <a href="admin/admin.html">
             <i class="bx bx-grid-alt"></i>
             <span class="links_name">Dashboard</span>
           </a>
@@ -151,7 +151,7 @@
               </ul>
             </div>
             <div class="button">
-              <a href="addTeacher.html"
+              <a href="{% url 'addteacher' %}"
                 ><i class="bx bxs-user-plus bx-xs" style="margin-right: 5px"></i
                 >Tambah</a
               >
