--- a/templates/teacher/editGrade.html
+++ b/templates/teacher/editGrade.html
@@ -38,13 +38,13 @@
           </a>
         </li>
         <li>
-          <a href="changePassword.html">
+          <a href="../changePassword.html">
             <i class="bx bx-lock-open-alt"></i>
             <span class="links_name">Ubah Password</span>
           </a>
         </li>
         <li>
-          <a href="hrTeacher.html">
+          <a href="../hrteacher/hrTeacher.html">
             <i class="bx bxs-user-account"></i>
             <span class="links_name">Wali Kelas</span>
           </a>
