--- a/templates/admin/admin.html
+++ b/templates/admin/admin.html
@@ -1,92 +1,7 @@
-{% load static %}
-
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Thearning-Rekapan nilai</title>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
-    <link
-      href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css"
-      rel="stylesheet"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script type="text/javascript" src="chartjs/Chart.js"></script>
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-  </head>
-  <body>
-    <div class="sidebar">
-      <div class="logo-details">
-        <i class="bx bx-bar-chart-alt-2"></i>
-        <span class="logo_name">Thearning</span>
-      </div>
-      <ul class="nav-links">
-        <li>
-          <a href="#" class="active">
-            <i class="bx bx-grid-alt bx-tada"></i>
-            <span class="links_name">Dashboard</span>
-          </a>
-        </li>
-        <li>
-          <a href="history.html">
-            <i class="bx bx-history"></i>
-            <span class="links_name">Riwayat Login</span>
-          </a>
-        </li>
-        <li>
-          <a href="report.html">
-            <i class="bx bxs-report"></i>
-            <span class="links_name">Laporan Akhir</span>
-          </a>
-        </li>
-        <li>
-          <a href="{% url 'teacher' %}">
-            <i class="bx bxs-user-rectangle"></i>
-            <span class="links_name">Data Guru</span>
-          </a>
-        </li>
-        <li>
-          <a href="student.html">
-            <i class="bx bx-book-reader"></i>
-            <span class="links_name">Data Siswa</span>
-          </a>
-        </li>
-        <li>
-          <a href="class.html">
-            <i class="bx bx-building-house"></i>
-            <span class="links_name">Data Kelas</span>
-          </a>
-        </li>
-        <li>
-          <a href="course.html">
-            <i class="bx bx-book-open"></i>
-            <span class="links_name">Data Mapel</span>
-          </a>
-        </li>
-        <li class="log_out">
-          <a href="#" onclick="confirmation()">
-            <i class="bx bx-log-out"></i>
-            <span class="links_name">Log out</span>
-          </a>
-        </li>
-      </ul>
-    </div>
+{% extends 'base/base.html' %}
+{% block body_block %}
     <section class="home-section">
-      <nav>
-        <div class="sidebar-button">
-          <i class="bx bxs-user-circle"></i>
-          <span class="dashboard">Dashboard</span>
-        </div>
-        <div class="search-box">
-          <input type="text" placeholder="Search..." />
-          <i class="bx bx-search"></i>
-        </div>
-        <div class="profile-details" onclick="move('profile.html')">
-          <i class="bx bxs-user-circle"></i>
-          <span class="admin_name">Username (Level)</span>
-          <i class="bx bx-log-in-circle"></i>
-        </div>
-      </nav>
+    {% include 'base/navbar.html' %}
 
       <div class="home-content">
         <div class="overview-boxes">
@@ -223,5 +138,4 @@
         anchorPlacement: "top-bottom",
       });
     </script>
-  </body>
-</html>
+{% endblock body_block %}
