--- a/templates/profile.html
+++ b/templates/profile.html
@@ -20,7 +20,7 @@
       </div>
       <ul class="nav-links">
         <li>
-          <a href="admin.html">
+          <a href="admin/admin.html">
             <i class="bx bx-grid-alt"></i>
             <span class="links_name">Dashboard</span>
           </a>
