--- a/templates/profileUser.html
+++ b/templates/profileUser.html
@@ -20,7 +20,7 @@
       </div>
       <ul class="nav-links">
         <li>
-          <a href="admin.html">
+          <a href="admin/admin.html">
             <i class="bx bx-grid-alt"></i>
             <span class="links_name">Dashboard</span>
           </a>
@@ -62,7 +62,7 @@
           </a>
         </li>
         <li>
-          <a href="hrTeacher.html">
+          <a href="hrteacher/hrTeacher.html">
             <i class="bx bxs-user-account"></i>
             <span class="links_name">Wali Kelas</span>
           </a>
