--- a/templates/report.html
+++ b/templates/report.html
@@ -20,7 +20,7 @@
       </div>
       <ul class="nav-links">
         <li>
-          <a href="admin.html">
+          <a href="admin/admin.html">
             <i class="bx bx-grid-alt"></i>
             <span class="links_name">Dashboard</span>
           </a>
@@ -129,7 +129,7 @@
                 </a>
                 <div class="button">
                   <a
-                    href="admin.html"
+                    href="admin/admin.html"
                     onclick="return false"
                     style="background: rgb(61, 61, 61); cursor: default"
                     ><i class="bx bx-printer" style="margin-right: 5px"></i
@@ -143,7 +143,7 @@
                   <span class="item">XI-RPL2</span>
                 </a>
                 <div class="button">
-                  <a href="admin.html"
+                  <a href="admin/admin.html"
                     ><i class="bx bx-printer" style="margin-right: 5px"></i
                     >Print</a
                   >
